--- a/frontend/mascotas.html
+++ b/frontend/mascotas.html
@@ -120,17 +120,17 @@
                                     <span class="mr-1">🎂</span>Edad aproximada
                                 </label>
                                 <input type="number" id="edad" name="edad" min="0" max="30" 
-                                       placeholder="En años"
+                                       placeholder="En anos"
                                        class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent">
                             </div>
                             <div>
-                                <label for="tamaño" class="block text-sm font-medium text-gray-700 mb-2">
-                                    <span class="mr-1">📏</span>Tamaño
+                                <label for="tamano" class="block text-sm font-medium text-gray-700 mb-2">
+                                    <span class="mr-1">📏</span>Tamano
                                 </label>
-                                <select id="tamaño" name="tamaño" 
+                                <select id="tamano" name="tamano" 
                                         class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent">
                                     <option value="">Seleccionar...</option>
-                                    <option value="pequeño">Pequeño (hasta 10kg)</option>
+                                    <option value="pequeno">Pequeno (hasta 10kg)</option>
                                     <option value="mediano">Mediano (10-25kg)</option>
                                     <option value="grande">Grande (más de 25kg)</option>
                                 </select>
